src/parser/snapshots/expr/unary/unary_negation.snap
---
source: src/parser/parser.rs
description: unary expressions
expression: actual.unwrap()
info: "-10"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 2
      kind:
        int_constant:
          - "10"
          - decimal
